force-app/main/default/objects/Contract__c/fields/Data_Sharing_Agreement_in_Place__c.field-meta.xml
<CustomField>
    <fullName>Data_Sharing_Agreement_in_Place__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, indicates that a Data Sharing Agreement is in place covering this client</description>
    <inlineHelpText>If checked, indicates that a Data Sharing Agreement is in place covering this client</inlineHelpText>
    <label>Data Sharing Agreement in Place?</label>
    <type>Checkbox</type>
</CustomField>