force-app/main/default/objects/Contract__c/fields/Data_Sharing_Stipulations__c.field-meta.xml
<CustomField>
    <fullName>Data_Sharing_Stipulations__c</fullName>
    <label>Data Sharing Stipulations</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>