force-app/main/default/objects/Contract__c/fields/Date_Completed_By_Legal__c.field-meta.xml
<CustomField>
    <fullName>Date_Completed_By_Legal__c</fullName>
    <description>time stamps when updates are made by SpringCM</description>
    <label>Date Completed By Legal</label>
    <type>DateTime</type>
</CustomField>