force-app/main/default/objects/Contract__c/fields/Date_Enrollment_Cap_Reached__c.field-meta.xml
<CustomField>
    <fullName>Date_Enrollment_Cap_Reached__c</fullName>
    <label>Date Enrollment Cap Reached</label>
    <type>Date</type>
</CustomField>