force-app/main/default/objects/Contract__c/fields/Date_Marketing_Put_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Date_Marketing_Put_On_Hold__c</fullName>
    <label>Date Marketing Put On Hold</label>
    <type>Date</type>
</CustomField>