force-app/main/default/objects/Contract__c/fields/Days_Notice_for_Term_for_Convenience__c.field-meta.xml
<CustomField>
    <fullName>Days_Notice_for_Term_for_Convenience__c</fullName>
    <label>Days Notice for Term for Convenience</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>