force-app/main/default/objects/Contract__c/fields/Days_Notice_for_Termination__c.field-meta.xml
<CustomField>
    <fullName>Days_Notice_for_Termination__c</fullName>
    <label>Days Notice for Termination</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>