force-app/main/default/objects/Contract__c/fields/Demographics_of_population__c.field-meta.xml
<CustomField>
    <fullName>Demographics_of_population__c</fullName>
    <description>Cultural attributes, socioeconomic status, locations, hourly vs salary, jobs of employees.</description>
    <inlineHelpText>Cultural attributes, socioeconomic status, locations, hourly vs salary, jobs of employees.</inlineHelpText>
    <label>Demographics of population</label>
    <length>255</length>
    <type>Text</type>
</CustomField>