force-app/main/default/objects/Contract__c/fields/Detailed_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Detailed Invoice?</label>
    <type>Checkbox</type>
</CustomField>