force-app/main/default/objects/Contract__c/fields/Detailed_Invoice_Recipients__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Invoice_Recipients__c</fullName>
    <description>Only email addresses are allowed in this field, separated by commas only.</description>
    <inlineHelpText>Only email addresses are allowed in this field, separated by commas only.</inlineHelpText>
    <label>Detailed Invoice Recipient(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>