force-app/main/default/objects/Contract__c/fields/Detailed_Invoice_Tags__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Invoice_Tags__c</fullName>
    <description>If a client has requested a custom detailed invoice with additional tags, please list the tag fields here seperated by a comma</description>
    <inlineHelpText>If a client has requested a custom detailed invoice with additional tags, please list the tag fields here seperated by a comma</inlineHelpText>
    <label>Detailed Invoice Tags</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>