force-app/main/default/objects/Contract__c/fields/DiabetesId__c.field-meta.xml
<CustomField>
    <fullName>DiabetesId__c</fullName>
    <label>Diabetes Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>