force-app/main/default/objects/Contract__c/fields/Direct_Mail_Only__c.field-meta.xml
<CustomField>
    <fullName>Direct_Mail_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Integrated with NetSuite and Redshift</description>
    <inlineHelpText>Integrated with NetSuite and Redshift</inlineHelpText>
    <label>Deprecated Direct Mail Only?</label>
    <type>Checkbox</type>
</CustomField>