force-app/main/default/objects/Contract__c/fields/Disable_BH_Coaching__c.field-meta.xml
<CustomField>
    <fullName>Disable_BH_Coaching__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable BH Coaching</label>
    <type>Checkbox</type>
</CustomField>