force-app/main/default/objects/Contract__c/fields/Disable_Live_Program_Eligibility_Check__c.field-meta.xml
<CustomField>
    <fullName>Disable_Live_Program_Eligibility_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Live Program Eligibility Check</label>
    <type>Checkbox</type>
</CustomField>