force-app/main/default/objects/Contract__c/fields/Disable_Teletherapy__c.field-meta.xml
<CustomField>
    <fullName>Disable_Teletherapy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Teletherapy</label>
    <type>Checkbox</type>
</CustomField>