force-app/main/default/objects/Contract__c/fields/Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>Disclaimer__c</fullName>
    <description>This is the disclaimer used for Enrollment Marketing purposes across multiple programs.</description>
    <label>Disclaimer</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>