force-app/main/default/objects/Contract__c/fields/Disclaimer_DM_HTN__c.field-meta.xml
<CustomField>
    <fullName>Disclaimer_DM_HTN__c</fullName>
    <description>The disclaimer language for marketing materials targeting individuals with both Diabetes and Hypertension</description>
    <inlineHelpText>The disclaimer language for marketing materials targeting individuals with both Diabetes and Hypertension</inlineHelpText>
    <label>Disclaimer DM + HTN</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>