force-app/main/default/objects/Contract__c/fields/Do_Not_Use_Provided_Email_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Use_Provided_Email_Addresses__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enrollment Marketing - Client Overview</description>
    <label>Do Not Use Provided Email Addresses</label>
    <type>Checkbox</type>
</CustomField>