force-app/main/default/objects/Contract__c/fields/Downmarket__c.field-meta.xml
<CustomField>
    <fullName>Downmarket__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Note:  Jenga #1398(Black Panther) - Downmarket checkbox is replaced with Population Type on CO.  This is depreciated field and will be deleted in future sprint
Used to easily identify which Client Overview records are associated with Downmarket clients in reporting</description>
    <label>Downmarket</label>
    <type>Checkbox</type>
</CustomField>