force-app/main/default/objects/Contract__c/fields/DPPId__c.field-meta.xml
<CustomField>
    <fullName>DPPId__c</fullName>
    <label>DPP Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>