force-app/main/default/objects/Contract__c/fields/Eligibility_Escalation_Path__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Escalation_Path__c</fullName>
    <description>Articulates escalation rules (if any) so the eligibility team knows what to do if they are unable to verify eligibility</description>
    <label>Eligibility Escalation Path</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Escalation</fullName>
            </value>
            <value>
                <fullName>Escalate to PBM</fullName>
            </value>
            <value>
                <fullName>Escalate to CSM</fullName>
            </value>
            <value>
                <fullName>Escalate to Defined Contact (Provide Details)</fullName>
            </value>
            <value>
                <fullName>Check ESI Portal</fullName>
            </value>
            <value>
                <fullName>Complex Escalation (Provide Details)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>