force-app/main/default/objects/Contract__c/fields/Eligibility_Exceptions_Rules__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Exceptions_Rules__c</fullName>
    <description>Please include details for any exceptions or rules that deviate from the standard eligibility verification method.</description>
    <inlineHelpText>Please include details for any exceptions or rules that deviate from the standard eligibility verification method.</inlineHelpText>
    <label>Eligibility Exceptions/Rules</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>