force-app/main/default/objects/Contract__c/fields/Eligibility_File_Cadence__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_File_Cadence__c</fullName>
    <description>The cadence that eligibility files will be delivered</description>
    <inlineHelpText>The cadence that eligibility files will be delivered</inlineHelpText>
    <label>Eligibility File Cadence</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>