force-app/main/default/objects/Contract__c/fields/Eligibility_or_Census_Data_Grade__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_or_Census_Data_Grade__c</fullName>
    <label>Eligibility or Census Data Grade</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A+</fullName>
            </value>
            <value>
                <fullName>A-</fullName>
            </value>
            <value>
                <fullName>B+</fullName>
            </value>
            <value>
                <fullName>B-</fullName>
            </value>
            <value>
                <fullName>C+</fullName>
            </value>
            <value>
                <fullName>C-</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
            <value>
                <fullName>Not Graded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>