force-app/main/default/objects/Contract__c/fields/Eligibility_Sentence__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Sentence__c</fullName>
    <description>This is the Eligibility Sentence used for Enrollment Marketing across multiple programs.</description>
    <label>Eligibility Sentence</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>