force-app/main/default/objects/Contract__c/fields/Eligibility_Sentence_DM_HTN__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Sentence_DM_HTN__c</fullName>
    <description>The eligibility sentence for marketing materials targeting individuals with both Diabetes and Hypertension</description>
    <inlineHelpText>The eligibility sentence for marketing materials targeting individuals with both Diabetes and Hypertension</inlineHelpText>
    <label>Eligibility Sentence DM + HTN</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>