force-app/main/default/objects/Contract__c/fields/Eligibility_Team_Notes__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Team_Notes__c</fullName>
    <description>For Eligibility team to track additional details/notes that don&apos;t fit into any of the predefined Eligibility fields</description>
    <inlineHelpText>For Eligibility team to track additional details/notes that don&apos;t fit into any of the predefined Eligibility fields</inlineHelpText>
    <label>Eligibility Team Notes</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>