force-app/main/default/objects/Contract__c/fields/Eligibility_Verification_Method__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Verification_Method__c</fullName>
    <description>Integrated with Redshift</description>
    <inlineHelpText>Integrated with Redshift</inlineHelpText>
    <label>Eligibility Verification Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Eligibility File</fullName>
            </value>
            <value>
                <fullName>Eligibility File AND RTE</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Pharmacy Benefit Manager</fullName>
            </value>
            <value>
                <fullName>RTE + (File OR Group ID)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>