force-app/main/default/objects/Contract__c/fields/Eligible_Group_IDs__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Group_IDs__c</fullName>
    <description>List INCLUDED Group IDs only. If entering multiple Group IDs please separate with semicolons.</description>
    <inlineHelpText>List INCLUDED Group IDs only. If entering multiple Group IDs please separate with semicolons.</inlineHelpText>
    <label>Eligible Group IDs</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>