force-app/main/default/objects/Contract__c/fields/Eligible_Member_Communication_Method__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Member_Communication_Method__c</fullName>
    <label>Eligible Member Communication Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Telephone</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>