force-app/main/default/objects/Contract__c/fields/Email_Access__c.field-meta.xml
<CustomField>
    <fullName>Email_Access__c</fullName>
    <label>Email Access</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>Personal and Work</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>