force-app/main/default/objects/Contract__c/fields/Email_Notification_of_sFTP_Upload__c.field-meta.xml
<CustomField>
    <fullName>Email_Notification_of_sFTP_Upload__c</fullName>
    <label>Email Notification of sFTP Upload</label>
    <length>255</length>
    <type>Text</type>
</CustomField>