force-app/main/default/objects/Contract__c/fields/EML__c.field-meta.xml
<CustomField>
    <fullName>EML__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrollment Marketing Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LVGO_Client_Overviews2</relationshipName>
    <type>Lookup</type>
</CustomField>