force-app/main/default/objects/Contract__c/fields/Engagement_Criteria_Option__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Criteria_Option__c</fullName>
    <inlineHelpText>See default engagement criteria options. Any custom configurations outside of the default options require approval from clinical product.</inlineHelpText>
    <label>Engagement Criteria Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default ESI</fullName>
            </value>
            <value>
                <fullName>Option 2</fullName>
            </value>
            <value>
                <fullName>Default Non-ESI</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Option 1</fullName>
                <isActive>false</isActive>
                <label>Option 1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>