force-app/main/default/objects/Contract__c/fields/Enrolled_in_Livongo_Reports__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_in_Livongo_Reports__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the client or a contractual partner receives reports from Livongo</description>
    <inlineHelpText>Indicates if the client or a contractual partner receives reports from Livongo</inlineHelpText>
    <label>Enrolled in Livongo Reports</label>
    <type>Checkbox</type>
</CustomField>