force-app/main/default/objects/Contract__c/fields/Enrolled_in_PartnerStandard_Report__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_in_PartnerStandard_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enrolled in Partner-Standard Report</label>
    <type>Checkbox</type>
</CustomField>