force-app/main/default/objects/Contract__c/fields/Enrollment_Marketing_Conversation_Needed__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Marketing_Conversation_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enrollment Marketing - Client Overview</description>
    <label>Enrollment Marketing Conversation Needed</label>
    <type>Checkbox</type>
</CustomField>