force-app/main/default/objects/Contract__c/fields/Enrollment_Marketing_Customizations__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Marketing_Customizations__c</fullName>
    <description>Describes any Enrollment Marketing customizations, exceptions or special handling</description>
    <inlineHelpText>Enrollment Marketing customizations, exceptions or special handling</inlineHelpText>
    <label>Enrollment Marketing Customizations</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>