force-app/main/default/objects/Contract__c/fields/Enrollment_on_Autopilot__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_on_Autopilot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes if we are allowed to send out enrollment communications without client approval</description>
    <inlineHelpText>Denotes if we are allowed to send out enrollment communications without client approval</inlineHelpText>
    <label>Enrollment on Autopilot</label>
    <type>Checkbox</type>
</CustomField>