force-app/main/default/objects/Contract__c/fields/Escalation_Contact__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Contact__c</fullName>
    <description>If &quot;Escalate to Defined Contact&quot; is chosen as the Eligibility Escalation Path, you must provide the contact info.</description>
    <inlineHelpText>If &quot;Escalate to Defined Contact&quot; is chosen as the Eligibility Escalation Path, you must provide the contact info.</inlineHelpText>
    <label>Escalation Contact</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>