force-app/main/default/objects/Contract__c/fields/Escalation_Details__c.field-meta.xml
<CustomField>
    <fullName>Escalation_Details__c</fullName>
    <description>If &quot;Complex Escalation&quot; is chosen as the Eligibility Escalation Path, you must provide the specific escalation details</description>
    <inlineHelpText>If &quot;Complex Escalation&quot; is chosen as the Eligibility Escalation Path, you must provide the specific escalation details</inlineHelpText>
    <label>Complex Escalation Details</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>