force-app/main/default/objects/Contract__c/fields/Expected_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Launch_Date__c</fullName>
    <inlineHelpText>This value is read only and updated based on the close date on Opportunity</inlineHelpText>
    <label>Expected Launch Date</label>
    <type>Date</type>
</CustomField>