force-app/main/default/objects/Contract__c/fields/External_Tags__c.field-meta.xml
<CustomField>
    <fullName>External_Tags__c</fullName>
    <label>External Tags</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>abacus_incentive</fullName>
            </value>
            <value>
                <fullName>account</fullName>
            </value>
            <value>
                <fullName>account_id</fullName>
            </value>
            <value>
                <fullName>account_nbr</fullName>
            </value>
            <value>
                <fullName>acct_name</fullName>
            </value>
            <value>
                <fullName>acct_number</fullName>
            </value>
            <value>
                <fullName>aco_status</fullName>
            </value>
            <value>
                <fullName>active_coverage</fullName>
            </value>
            <value>
                <fullName>additional_item_code</fullName>
            </value>
            <value>
                <fullName>aetna_dob</fullName>
            </value>
            <value>
                <fullName>aetna_first_name</fullName>
            </value>
            <value>
                <fullName>aetna_last_name</fullName>
            </value>
            <value>
                <fullName>aetna_middle_name</fullName>
            </value>
            <value>
                <fullName>alight_id</fullName>
            </value>
            <value>
                <fullName>alight_internal_id</fullName>
            </value>
            <value>
                <fullName>ALLDC</fullName>
            </value>
            <value>
                <fullName>alpha-prefix</fullName>
            </value>
            <value>
                <fullName>alpha_prefix</fullName>
            </value>
            <value>
                <fullName>altempid</fullName>
            </value>
            <value>
                <fullName>alter_id</fullName>
            </value>
            <value>
                <fullName>alt_id</fullName>
            </value>
            <value>
                <fullName>arkema</fullName>
            </value>
            <value>
                <fullName>BCBS_ALLOCATED_PLAN_CODE</fullName>
            </value>
            <value>
                <fullName>bcbs_group_id</fullName>
            </value>
            <value>
                <fullName>bcbs_subscriber_id</fullName>
            </value>
            <value>
                <fullName>BDHEALTHYLIVES</fullName>
            </value>
            <value>
                <fullName>benefit_id</fullName>
            </value>
            <value>
                <fullName>billing_id</fullName>
            </value>
            <value>
                <fullName>bill_level1</fullName>
            </value>
            <value>
                <fullName>bill_level2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>