force-app/main/default/objects/Contract__c/fields/Fast_Start_Credit_Offered__c.field-meta.xml
<CustomField>
    <fullName>Fast_Start_Credit_Offered__c</fullName>
    <description>Required in SpringCM; used to indicate whether Fast Start Credit applies. If so, users will be required to populate the Fast Start Credit fields.</description>
    <inlineHelpText>Required in SpringCM; used to indicate whether Fast Start Credit applies. If so, users will be required to populate the Fast Start Credit fields.</inlineHelpText>
    <label>Fast Start Credit Offered?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>