force-app/main/default/objects/Contract__c/fields/Fast_Start_Credit_Offered_old__c.field-meta.xml
<CustomField>
    <fullName>Fast_Start_Credit_Offered_old__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fast Start Credit Offered? (OLD)</label>
    <type>Checkbox</type>
</CustomField>