force-app/main/default/objects/Contract__c/fields/Fast_Start_Credit_Type__c.field-meta.xml
<CustomField>
    <fullName>Fast_Start_Credit_Type__c</fullName>
    <inlineHelpText>Edits Controlled - Financially Material</inlineHelpText>
    <label>Fast Start Credit Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One-time ($X,XXX credit or $X PPPM credit)</fullName>
            </value>
            <value>
                <fullName>Recurring (credit of $X PPPM)</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>