force-app/main/default/objects/Contract__c/fields/Fast_Start_Custom__c.field-meta.xml
<CustomField>
    <fullName>Fast_Start_Custom__c</fullName>
    <inlineHelpText>Edits Controlled - Financially Material</inlineHelpText>
    <label>Fast Start Custom</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>