force-app/main/default/objects/Contract__c/fields/Fast_Start_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Fast_Start_Launch_Date__c</fullName>
    <label>Fast Start Launch Date</label>
    <type>Date</type>
</CustomField>