force-app/main/default/objects/Contract__c/fields/Fast_Start_Participation_Rate__c.field-meta.xml
<CustomField>
    <fullName>Fast_Start_Participation_Rate__c</fullName>
    <label>Fast Start Participation Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>