force-app/main/default/objects/Contract__c/fields/Fast_Start_Participation_Rate_Date_Met__c.field-meta.xml
<CustomField>
    <fullName>Fast_Start_Participation_Rate_Date_Met__c</fullName>
    <label>Fast Start Participation Rate Date Met</label>
    <type>Date</type>
</CustomField>