force-app/main/default/objects/Contract__c/fields/General_Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>General_Disclaimer__c</fullName>
    <description>General Disclaimer information to be used on assets promoting Whole Person solutions or multiple standalone programs</description>
    <inlineHelpText>General Disclaimer information to be used on assets promoting Whole Person solutions or multiple standalone programs</inlineHelpText>
    <label>General Disclaimer</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>