force-app/main/default/objects/Contract__c/fields/General_Eligibility_Sentence__c.field-meta.xml
<CustomField>
    <fullName>General_Eligibility_Sentence__c</fullName>
    <description>General Eligibility Sentence information to be used on assets promoting Whole Person solutions or multiple standalone programs</description>
    <inlineHelpText>General Eligibility Sentence information to be used on assets promoting Whole Person solutions or multiple standalone programs</inlineHelpText>
    <label>General Eligibility Sentence</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>