force-app/main/default/objects/Contract__c/fields/General_Spanish_Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>General_Spanish_Disclaimer__c</fullName>
    <label>General Spanish Disclaimer</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>