force-app/main/default/objects/Contract__c/fields/General_Spanish_Eligibility_Sentence__c.field-meta.xml
<CustomField>
    <fullName>General_Spanish_Eligibility_Sentence__c</fullName>
    <label>General Spanish Eligibility Sentence</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>