force-app/main/default/objects/Contract__c/fields/Global_NDA_in_place__c.field-meta.xml
<CustomField>
    <fullName>Global_NDA_in_place__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Global NDA in place?</label>
    <type>Checkbox</type>
</CustomField>