force-app/main/default/objects/Contract__c/fields/GLP_1_Model__c.field-meta.xml
<CustomField>
    <fullName>GLP_1_Model__c</fullName>
    <label>GLP-1 Model</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Program_Name__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Lifestyle</fullName>
            </value>
            <value>
                <fullName>Engagement Criteria</fullName>
            </value>
            <value>
                <fullName>Sole Prescriber</fullName>
            </value>
            <value>
                <fullName>Sole Prescriber and Engagement Criteria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>