force-app/main/default/objects/Contract__c/fields/Goals_for_Livongo__c.field-meta.xml
<CustomField>
    <fullName>Goals_for_Livongo__c</fullName>
    <description>How client measures success and metrics they want to reach?</description>
    <inlineHelpText>How client measures success and metrics they want to reach?</inlineHelpText>
    <label>Goals for Livongo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>