force-app/main/default/objects/Contract__c/fields/Health_Benefit_Alt_Text__c.field-meta.xml
<CustomField>
    <fullName>Health_Benefit_Alt_Text__c</fullName>
    <description>Client preferred alternative to mention of &quot;health benefit&quot; in assets.</description>
    <inlineHelpText>Client preferred alternative to mention of &quot;health benefit&quot; in assets.</inlineHelpText>
    <label>Health Benefit Alt Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>