force-app/main/default/objects/Contract__c/fields/Heart_Failure_Id__c.field-meta.xml
<CustomField>
    <fullName>Heart_Failure_Id__c</fullName>
    <label>Heart Failure Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>