force-app/main/default/objects/Contract__c/fields/Hide_SOGI_Questions__c.field-meta.xml
<CustomField>
    <fullName>Hide_SOGI_Questions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide SOGI Questions</label>
    <type>Checkbox</type>
</CustomField>