force-app/main/default/objects/Contract__c/fields/HIPAA_Covered_Entity__c.field-meta.xml
<CustomField>
    <fullName>HIPAA_Covered_Entity__c</fullName>
    <label>HIPAA Covered Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>