force-app/main/default/objects/Contract__c/fields/Hold_All_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Hold_All_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Integrated with Redshift</description>
    <inlineHelpText>Integrated with Redshift</inlineHelpText>
    <label>Hold All Marketing</label>
    <type>Checkbox</type>
</CustomField>