force-app/main/default/objects/Contract__c/fields/Hold_Member_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Hold_Member_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hold Member Marketing</label>
    <type>Checkbox</type>
</CustomField>